subindo primeiro commit do jogo da forca

--- a/challenge-oracle-one-02/index.html
+++ b/challenge-oracle-one-02/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inter&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="/index.js"></script>
+    <title>Jogo da Forca</title>
+</head>
 
 <body>
-  Teste
-</body>
+    <header>
+        <h1>Jogo da Forca</h1>
+    </header>
+    <div class="container">
+        <main class="center">
+            <a href="./pages/jogo.html"><button class="color">Jogar</button></a>
+            <a href="./pages/addPalavra.html"> <button>Adicionar Palavra</button></a>
+        </main>
 
-<footer>
-  <p>&copy; Núbia Alves 2022 </p>
-</footer>
+    </div>
+    <footer>
+        <div class="container">
+            &copy; Desenvolvido por: Núbia Alves
+        </div>
+    </footer>
+</body>
 
 </html>
