--- a/challenge-oracle-one-02/pages/addPalavra.html
+++ b/challenge-oracle-one-02/pages/addPalavra.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/index.js"></script>
+    <script defer src="../index.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <title>Jogo da Forca</title>
@@ -25,7 +25,7 @@
                 <button class="color" onclick="addPalavra()">
                     Salvar e Começar
                 </button>
-                <button onclick='window.location.assign("/index.html")'>Cancelar</button>
+                <button onclick='window.location.assign("../index.html")'>Cancelar</button>
             </div>
         </main>
         
