--- a/challenge-oracle-one-02/pages/jogo.html
+++ b/challenge-oracle-one-02/pages/jogo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/index.js"></script>
+    <script defer src="../index.js"></script>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/jogo.css">
     <title>Jogo da Forca</title>
